--- a/teach-me-ui/src/styles/Main/_Chat.scss
+++ b/teach-me-ui/src/styles/Main/_Chat.scss
@@ -36,29 +36,31 @@ $chat-header-min-height: 3.75rem;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.35);
   transition: 0.3s;
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: $theme-secondary-v4;
   }
 
   &.hide {
     transform: scale(0);
-    visibility: hidden;
+    // visibility: hidden;
   }
 }
 
 .chat-box-wrapper {
-  $box-height: 100vh;
+  $box-height: 100%;
   $box-width: 100%;
 
   overflow: hidden;
   position: fixed;
   width: $box-width;
-  height: 100%; //$box-height;
-  max-height: $box-height;
+  height: $box-height;
+  max-height: 100vh;
   box-shadow: 0 0.25rem 1.5rem rgba(0, 0, 0, 0.2);
   background-color: white;
   left: 0;
   top: 0;
+  display: none;
   right: 0;
   transition: 0.35s;
 
@@ -67,17 +69,18 @@ $chat-header-min-height: 3.75rem;
 
     header {
       ~ section {
-        transition: 0.35s;
-        visibility: hidden;
-        opacity: 0;
+        display: none;
       }
     }
   }
 
+  &.open {
+    animation: openChat 0.35s;
+  }
+
   &.close {
-    transform: scale(0.9);
+    transform: scale(0.95);
     opacity: 0;
-    visibility: hidden;
   }
 }
 
@@ -166,7 +169,8 @@ body.desktop {
         }
       }
 
-      &:hover {
+      &:hover,
+      &:focus {
         &::-webkit-scrollbar-thumb {
           visibility: visible;
         }
